--- a/macarthur-resume.html
+++ b/macarthur-resume.html
@@ -198,7 +198,7 @@ section h2 {
 				Oct 2018
 			</span>
 			<span class="endDate">
-				- Oct 2018
+				- Present
 			</span>
 
 			<ul class="highlights">
